# MQTT-server

./: README.md  pyproject.toml
config/: mosquitto.conf.template  topics.yaml
scripts/: setup_pi.sh
src/mqtt_manager/: __init__.py  __main__.py  app.py
src/mqtt_manager/models/: broker_config.py  connection.py  topic_tree.py
src/mqtt_manager/services/: mqtt_service.py  ssh_manager.py
src/mqtt_manager/utils/: settings.py
src/mqtt_manager/views/: config_tab.py  connect_tab.py  monitor_tab.py  server_tab.py  topics_tab.py  users_tab.py
tests/: test_broker_config.py  test_ssh_manager.py  test_topic_tree.py
